--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,15 +1,15 @@
-@import './themes//dark';
-@import './themes//light';
-@import './variables/global';
-@import 'reset';
+@import "./themes//dark";
+@import "./themes//light";
+@import "./variables/global";
+@import "reset";
 
 .app {
     font: var(--font-m);
     background-color: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
 }
+
 .content-page {
     display: flex;
 }
