--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,17 +1,15 @@
 :root {
-    --font-family-main: Consolas, "Times New Roman", Serif;
+    --font-family-main: consolas, "Times New Roman", serif;
     --font-size-m: 16px;
     --font-line-m: 24px;
     --font-m: var(--font-family-main) var(--font-size-m) / var(--font-line-m);
-
     --font-size-l: 24px;
-    --font-size-l: 32px;
     --font-l: var(--font-family-main) var(--font-size-l) / var(--font-line-l);
 
-    //размеры
+    // размеры
     --navbar-height: 50px;
-//sidebar
+
+    // sidebar
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
-
 }
