--- a/src/shared/ui/AppButton/AppButton.module.scss
+++ b/src/shared/ui/AppButton/AppButton.module.scss
@@ -3,9 +3,15 @@
 }
 
 .clear {
-    background-color: deeppink;
     padding: 0;
-    margin: 0;
     border: none;
+    background: none;
     outline: none;
+    color: var(--inverted-bg-color);
+}
+.outline {
+    border: 2px solid var(--primary-color);
+    color: var(--inverted-bg-color);
+    padding: 15px;
+    background: none;
 }
