--- a/src/shared/ui/AppButton/AppButton.module.scss
+++ b/src/shared/ui/AppButton/AppButton.module.scss
@@ -1,5 +1,6 @@
 .AppButton {
     cursor: pointer;
+    padding: 6px 15px;
 }
 
 .clear {
@@ -15,3 +16,58 @@
     padding: 15px;
     background: none;
 }
+.background {
+    background: var(--bg-color);
+    color: var(--primary-color);
+    border: none;
+}
+
+.backgroundInverted {
+    background: var(--inverted-bg-color);
+    color: var(--inverted-primary-color);
+    border: none;
+}
+
+.square {
+    height: var(--font-line-m);
+    width: var(--font-line-m);
+    padding: 0;
+    font-size: var(--font-size-m);
+}
+
+.square.size_m {
+    height: var(--font-line-m);
+    width: var(--font-line-m);
+    padding: 0;
+    font-size: var(--font-size-m);
+}
+
+.square.size_l {
+    height: var(--font-line-l);
+    width: var(--font-line-l);
+    padding: 0;
+    font-size: var(--font-size-l);
+}
+
+.square.size_xl {
+    height: var(--font-line-xl);
+    width: var(--font-line-xl);
+    padding: 0;
+    font-size: var(--font-size-xl);
+}
+
+.size_m {
+    font-size: var(--font-size-m);
+}
+
+.size_l {
+    font-size: var(--font-size-l);
+}
+
+.size_xl {
+    font-size: var(--font-size-xl);
+}
+// .square {
+//     width: 40px;
+//     height: 40px;
+// }
