--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,9 +1,12 @@
 :root {
     --font-family-main: consolas, "Times New Roman", serif;
-    --font-size-m: 16px;
+    --font-size-m: 20px;
     --font-line-m: 24px;
-    --font-m: var(--font-family-main) var(--font-size-m) / var(--font-line-m);
     --font-size-l: 24px;
+    --font-line-l: 32px;
+    --font-size-xl: 32px;
+    --font-line-xl: 40px;
+    --font-m: var(--font-family-main) var(--font-size-m) / var(--font-line-m);
     --font-l: var(--font-family-main) var(--font-size-l) / var(--font-line-l);
 
     // размеры
