--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -5,15 +5,53 @@
     background-color: var(--inverted-bg-color);
     transition: width 0.5s;
 }
-
-.collapsed {
-    width: var(--sidebar-width-collapsed);
+.lang{
+    padding-left: 10px;
 }
-
 .switchers {
     position: absolute;
     bottom: 20px;
     display: flex;
     justify-content: center;
     width: 100%;
+}
+.switchers button {
+    padding: 10px;
+}
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+    .switchers {
+        flex-direction: column;
+        align-items: center;
+    }
+    .switchers button {
+        padding: 5px;
+    }
+}
+
+
+.collapseBtn{
+    position: absolute;
+    right: -40px;
+    bottom: 40px;
+}
+
+.links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.linkItem {
+    margin-top: 10px;
+    margin-left: 20px;
+    color: var(--bg-color);
+    font-size: var(--font-size-m);
+}
+
+.item {
+    align-self: center;
+    padding-bottom: 10px;
+}
+.icon {
+    fill: var(--bg-color)
 }
