fix linting errors

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,8 @@
 .app.dark {
-    --bg-color: rgb(9, 31, 21);
-    --inverted-bg-color: rgb(221, 239, 201);
+    --bg-color: rgb(9 31 21);
+    --inverted-bg-color: rgb(221 239 201);
     --primary-color: #032903cd;
     --secondary-color: lightgreen;
-    --primary-font-color: rgb(22, 27, 5);
+    --primary-font-color: rgb(22 27 5);
     --secondary-font-color: grey;
 }
