--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,8 +1,8 @@
 .app.light {
-    --bg-color: rgb(221, 239, 201);
-    --inverted-bg-color: rgb(9, 31, 21);
-    --primary-color:  lightgreen;
+    --bg-color: rgb(221 239 201);
+    --inverted-bg-color: rgb(9 31 21);
+    --primary-color: lightgreen;
     --secondary-color: #032903cd;
     --primary-font-color: #0a0734;
-    --secondary-font-color: rgb(198, 204, 237);
+    --secondary-font-color: rgb(198 204 237);
 }
