--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -5,9 +5,11 @@
     background-color: var(--inverted-bg-color);
     transition: width 0.5s;
 }
-.lang{
+
+.lang {
     padding-left: 10px;
 }
+
 .switchers {
     position: absolute;
     bottom: 20px;
@@ -15,22 +17,25 @@
     justify-content: center;
     width: 100%;
 }
+
 .switchers button {
     padding: 10px;
 }
+
 .collapsed {
     width: var(--sidebar-width-collapsed);
+
     .switchers {
         flex-direction: column;
         align-items: center;
     }
+
     .switchers button {
         padding: 5px;
     }
 }
 
-
-.collapseBtn{
+.collapseBtn {
     position: absolute;
     right: -40px;
     bottom: 40px;
@@ -41,6 +46,7 @@
     flex-direction: column;
     justify-content: center;
 }
+
 .linkItem {
     margin-top: 10px;
     margin-left: 20px;
@@ -52,6 +58,7 @@
     align-self: center;
     padding-bottom: 10px;
 }
+
 .icon {
-    fill: var(--bg-color)
+    fill: var(--bg-color);
 }
