add modal, portal, change header

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -3,6 +3,6 @@
     --inverted-bg-color: rgb(9 31 21);
     --primary-color: lightgreen;
     --secondary-color: #032903cd;
-    --primary-font-color: #0a0734;
+    --primary-font-color: #d8d7ee;
     --secondary-font-color: rgb(198 204 237);
 }
