--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -16,4 +16,10 @@
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
     --primary-color: #049604;
+
+    //z-индексы
+    --modal-z-index: 10;
+
+    //цвета 
+    --overlay-bg-color: rgba(0, 0, 0, 0.6)
 }
