--- a/src/shared/ui/AppButton/AppButton.module.scss
+++ b/src/shared/ui/AppButton/AppButton.module.scss
@@ -17,6 +17,13 @@
     padding: 15px;
     background: none;
 }
+.clearInverted {
+    padding: 0;
+    border: none;
+    background: none;
+    outline: none;
+    color: var(--inverted-primary-color);
+}
 
 .background {
     background: var(--bg-color);
