fix modal styles

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,8 +1,8 @@
-.app.light {
+.app_light_theme {
     --bg-color: rgb(221 239 201);
     --inverted-bg-color: rgb(9 31 21);
     --primary-color: lightgreen;
     --secondary-color: #032903cd;
     --primary-font-color: #d8d7ee;
-    --secondary-font-color: rgb(198 204 237);
+    --secondary-font-color: rgb(8, 8, 9);
 }
