--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -11,7 +11,8 @@
 .overlay {
     width: 100%;
     height: 100%;
-    background-color: var(--bg-color);
+    background-color: var(--inverted-bg-color);
+    opacity: 0.6;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,6 +35,7 @@
     opacity: 1;
     .content {
         transform: scale(1);
-        background: white;
+        background: var(--primary-color);
+        color: var(--secondary-font-color)
     }
 }
