--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -4,15 +4,13 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: var(--modal-z-index);
+    
     opacity: 0;
     pointer-events: none;
 }
 .overlay {
     width: 100%;
     height: 100%;
-    background-color: var(--inverted-bg-color);
-    opacity: 0.6;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,11 +29,13 @@
 
 .opened {
     pointer-events: auto;
-   
+    z-index: var(--modal-z-index);
     opacity: 1;
+   
     .content {
+        
         transform: scale(1);
-        background: var(--primary-color);
-        color: var(--secondary-font-color)
+        background: var(--inverted-bg-color);
+        color: var(--primary-color)
     }
 }
