fix login form stories

--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -1,11 +1,11 @@
 .title {
     font: var(--font-size-l);
-    color: var(--primary-color)
+    color: var(--primary-color);
 }
 
 .text {
     font: var(--font-size-m);
-    color: var(--secondary-color)
+    color: var(--secondary-color);
 }
 
 .error {
