--- a/src/shared/ui/Spinner/Spinner.module.scss
+++ b/src/shared/ui/Spinner/Spinner.module.scss
@@ -2,66 +2,67 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  .container {
+}
+
+.container {
     width: 100%;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #000;
-  }
-  
-  .box {
+}
+
+.box {
     position: relative;
     width: 100%;
     height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
-    -webkit-box-reflect: below 0 linear-gradient(transparent, transparent, rgba(38, 34, 41, 0.333));
-  }
-  
-  .box .loader {
+    -webkit-box-reflect: below 0 linear-gradient(transparent, transparent, rgb(38 34 41 / 33.3%));
+}
+
+.box .loader {
     position: absolute;
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    animation: animateLoading 2s linear infinite;
-  }
-  
-  .box .loader:nth-child(2),
-  .box .loader:nth-child(4) {
+    animation: animate-loading 2s linear infinite;
+}
+
+.box .loader:nth-child(2),
+.box .loader:nth-child(4) {
     animation-delay: -1s;
     filter: hue-rotate(290deg);
-  }
-  
-  @keyframes animateLoading {
+}
+
+@keyframes animate-loading {
     0% {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
+
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  }
-  
-  .box .loader:nth-child(1)::before,
-  .box .loader:nth-child(2)::before {
-    content: '';
+}
+
+.box .loader:nth-child(1)::before,
+.box .loader:nth-child(2)::before {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 50%;
     height: 100%;
-    background: linear-gradient(to top, transparent, rgba(150, 9, 101, 0.5));
+    background: linear-gradient(to top, transparent, rgb(150 9 101 / 50%));
     background-size: 100px 180px;
     background-repeat: no-repeat;
     border-top-left-radius: 100px;
     border-bottom-left-radius: 100px;
-  }
-  
-  .container .loader i {
+}
+
+.container .loader i {
     position: absolute;
     top: 0;
     left: 50%;
@@ -70,23 +71,24 @@
     height: 20px;
     background: #ea00ff;
     border-radius: 50%;
-    box-shadow: 0 0 10px #ff0084,
-      0 0 20px #ff0084,
-      0 0 30px #ff0084,
-      0 0 40px #ff0084,
-      0 0 50px #ff0084,
-      0 0 60px #ff0084,
-      0 0 70px #ff0084,
-      0 0 80px #ff0084,
-      0 0 90px #ff0084,
-      0 0 100px #ff0084;
+    box-shadow:
+        0 0 10px #ff0084,
+        0 0 20px #ff0084,
+        0 0 30px #ff0084,
+        0 0 40px #ff0084,
+        0 0 50px #ff0084,
+        0 0 60px #ff0084,
+        0 0 70px #ff0084,
+        0 0 80px #ff0084,
+        0 0 90px #ff0084,
+        0 0 100px #ff0084;
     z-index: 10;
-  }
-  
-  .box .loader span {
+}
+
+.box .loader span {
     position: absolute;
     inset: 20px;
     background: #000;
     border-radius: 50%;
     z-index: 1;
-  }
+}
