--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -16,7 +16,7 @@
         outline: none;
     }
 
-    color: transparent;
+    color: black;
     text-shadow: 0 0 0 black;
 }
 
@@ -33,6 +33,10 @@
 .carriageWrapper {
     flex-grow: 1;
     position: relative;
+}
+
+.readonly {
+    opacity: 0.7;
 }
 
 @keyframes blink {
