--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,5 +1,6 @@
 @import "./themes//dark";
 @import "./themes//light";
+@import "./themes//blue.scss";
 @import "./variables/global";
 @import "reset";
 
