add private routes, fix get auth data

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,6 @@
 @import "./themes//dark";
 @import "./themes//light";
-@import "./themes//blue.scss";
+@import "./themes//blue";
 @import "./variables/global";
 @import "reset";
 
