--- a/src/app/styles/themes/blue.scss
+++ b/src/app/styles/themes/blue.scss
@@ -1,8 +1,8 @@
 .app_blue_theme {
     --bg-color: #334977;
-    --inverted-bg-color: #F4F6FB;
+    --inverted-bg-color: #f4f6fb;
     --primary-color: #265459;
-    --secondary-color:#F4F6FB;
+    --secondary-color: #f4f6fb;
     --primary-font-color: rgb(22 27 5);
     --secondary-font-color: white;
 }
