add article basic structure

--- a/src/app/styles/themes/blue.scss
+++ b/src/app/styles/themes/blue.scss
@@ -5,4 +5,7 @@
     --secondary-color:#F4F6FB;
     --primary-font-color: rgb(22 27 5);
     --secondary-font-color: white;
+    //skeleton
+    --skeleton-color: #ababca;
+    --skeleton-shadow: #a0a0c8;
 }
