--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -5,4 +5,7 @@
     --secondary-color: #032903cd;
     --primary-font-color: #d8d7ee;
     --secondary-font-color: rgb(8 8 9);
+
+    --skeleton-color: #ababca;
+    --skeleton-shadow: #a0a0c8;
 }
