add article entity

--- a/src/app/styles/themes/blue.scss
+++ b/src/app/styles/themes/blue.scss
@@ -8,4 +8,7 @@
     //skeleton
     --skeleton-color: #ababca;
     --skeleton-shadow: #a0a0c8;
+
+    //code background
+    --code-bg: #869ed2;
 }
