--- a/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
@@ -13,3 +13,25 @@
 .Skeleton {
     margin-top: 15px;
 }
+
+.ArticleInfo {
+    display: flex;
+    align-items: center;
+}
+
+.icons {
+    margin-right: 8px;
+}
+
+.AvatarWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.Title {
+
+}
+.block {
+    margin-top: 16px;
+}
