--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -29,13 +29,28 @@
 }
 
 .small {
-    font-size: 20px;
+    .title{
+        font-size: 20px;
+    }
+    .text {
+        font-size: 16px;
+    }
 }
 
 .medium {
-    font-size: 24px;
+    .title{
+        font-size: 28px;
+    }
+    .text {
+        font-size: 24px;
+    }
 }
 
 .large {
-    font-size: 36px;
+    .title{
+        font-size: 36px;
+    }
+    .text {
+        font-size: 24px;
+    }
 }
