--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,10 +5,9 @@
     --secondary-color: lightgreen;
     --primary-font-color: rgb(22 27 5);
     --secondary-font-color: white;
-
     --skeleton-color: #4a4aa0;
     --skeleton-shadow: #181866;
 
-     //code background
-     --code-bg: rgb(9, 79, 47);
+    // code background
+    --code-bg: rgb(9 79 47);
 }
