add new comment form feature

--- a/src/entities/Comment/ui/CommentItem/CommentItem.module.scss
+++ b/src/entities/Comment/ui/CommentItem/CommentItem.module.scss
@@ -5,12 +5,15 @@
 
 .CommentItemHeader {
     display: flex;
-    & img, div {
+
+    & img,
+    div {
         margin-right: 10px;
     }
-    align-items: center;
 
+    align-items: center;
 }
+
 .CommentItemText {
     margin-top: 10px;
 }
