--- a/src/entities/Article/ui/ArticleViewSelector/ArticleViewSelector.module.scss
+++ b/src/entities/Article/ui/ArticleViewSelector/ArticleViewSelector.module.scss
@@ -1,3 +1,13 @@
 .selected Svg {
     fill: red
 }
+.ArticleViewSelector {
+    width: 40px;
+   display: flex;
+   align-content: center;
+   justify-content: space-between;
+
+   & :last-child {
+    margin-top: 2px;
+   }
+}
