--- a/src/shared/ui/Card/Card.module.scss
+++ b/src/shared/ui/Card/Card.module.scss
@@ -1,5 +1,13 @@
 .Card {
     padding: 15px;
     border-radius: 12px;
+    
+}
+.normal {
     background: var(--bg-card);
+    color: var(--primary-color);
+}
+
+.outlined {
+    border: 1px solid var(--primary-color);
 }
