--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,17 +1,14 @@
-
 //    .ArticleList {
 //     display: flex;
 //     flex-wrap: wrap;
 // }
-
-
-.TILE {
+.TILE 
+{
     &.ArticleList {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
     }
-  
 }
 
 .LIST {
