--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -11,6 +11,6 @@
     // code background
     --code-bg: rgb(9 79 47);
 
-     // article-cards
-     --bg-card: rgb(181, 211, 198);
+    // article-cards
+    --bg-card: rgb(181 211 198);
 }
