--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -16,7 +16,6 @@
         width: 200px;
         height: 200px;
         position: relative;
-
     }
 
     .image {
@@ -24,7 +23,7 @@
         width: 200px;
         height: 200px;
         object-fit: contain;
-        ;margin: 16px 0;
+        margin: 16px 0;
     }
 
     .date {
@@ -40,7 +39,6 @@
         display: flex;
         align-items: center;
         margin-top: 8px;
-
     }
 
     .types p {
@@ -48,15 +46,12 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-
     }
 
     .views {
         margin-left: auto;
         margin-right: 8px;
-
     }
-
 
     .title {
         margin-top: 8px;
@@ -67,17 +62,15 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
-
     }
 }
 
 .LIST {
-
     &:hover {
         opacity: 0.95;
         transform: scale(1.01);
-
     }
+
     .header {
         display: flex;
         align-items: center;
@@ -94,8 +87,6 @@
     .title {
         margin-top: 8px;
     }
-
-    .types {}
 
     .image {
         width: 100%;
