add VStack, HStack, Flex

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -36,9 +36,7 @@
 }
 
 .links {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+   // justify-content: center;
 }
 
 .collapseBtn {
