--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,9 +1,15 @@
 :root {
     --font-family-main: consolas, "Times New Roman", serif;
+    // small
+    --font-size-s: 20px;
+    --font-line-s: 24px;
+    // medium
     --font-size-m: 20px;
     --font-line-m: 24px;
+    //large
     --font-size-l: 24px;
     --font-line-l: 32px;
+    // extra large
     --font-size-xl: 32px;
     --font-line-xl: 40px;
     --font-m: var(--font-family-main) var(--font-size-m) / var(--font-line-m);
