--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -40,30 +40,30 @@
 
 .small {
     .title {
-        font-size: 20px;
+        font-size: var(--font-size-m);
     }
 
     .text {
-        font-size: 16px;
+        font-size: var(--font-size-s);
     }
 }
 
 .medium {
     .title {
-        font-size: 28px;
+        font-size: var(--font-size-l);
     }
 
     .text {
-        font-size: 24px;
+        font-size: var(--font-size-m);
     }
 }
 
 .large {
     .title {
-        font-size: 36px;
+        font-size: var(--font-size-xl);
     }
 
     .text {
-        font-size: 24px;
+        font-size: var(--font-size-l);
     }
 }
