add rtk query api refactoring

--- a/src/entities/Comment/ui/CommentItem/CommentItem.module.scss
+++ b/src/entities/Comment/ui/CommentItem/CommentItem.module.scss
@@ -1,4 +1,10 @@
 .CommentItem {
     border: 1px solid var(--primary-color);
+  
+}
+
+.CommentItemHeader, .CommentItemText {
+    margin-left: 5px;
+    margin-top: 5px;
 }
 
