add private route with required roles

--- a/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
@@ -5,11 +5,11 @@
 
 .loginInputs {
     margin-top: 20px !important;
-    color: black;
+    color: yellow;
 }
 
 .loginBtn {
     margin-top: 10px;
     margin-left: auto;
-    color: black;
+    color: rgb(38, 171, 42);
 }
