--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,7 +4,9 @@
 @import "./variables/global";
 @import "reset";
 
-body {
+body,
+.app_modal,
+.app_drawer {
     font: var(--font-m);
     background-color: var(--bg-color);
     color: var(--primary-color);
