--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -25,7 +25,8 @@
 
     // z-индексы
 
-    --modal-z-index: 10;
+    --modal-z-index: 100;
+    --overlay-z-index: 10;
 
     // цвета
     --overlay-bg-color: rgb(0 0 0 / 60%);
