--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -6,11 +6,6 @@
     bottom: 0;
     opacity: 0;
     pointer-events: none;
-}
-
-.overlay {
-    width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,6 +18,7 @@
     transition: 0.3s transform;
     transform: scale(0.5);
     overflow: hidden;
+    z-index: var(--modal-z-index)
 }
 
 .opened {
