chore: refactor article features, fix atricle page filters styles

--- a/src/pages/ArticlesPage/ui/ArticlesPageFilters/ArticlesPageFilters.module.scss
+++ b/src/pages/ArticlesPage/ui/ArticlesPageFilters/ArticlesPageFilters.module.scss
@@ -6,8 +6,12 @@
 
 .search {
     margin-top: 16px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .tabs {
     margin-top: 16px;
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
