--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -1,5 +1,7 @@
 .Wrapper {
     display: flex;
+    margin-left: 20px;
+    align-items: center;
 }
 
 .Label {
@@ -12,6 +14,7 @@
     color: var(--primary-color);
     padding: 2px 10px 2px 2px;
     border: solid 1px var(--primary-color);
+   
 }
 
 .option {
