chore: add appImage, fallback, errorfallback

--- a/src/shared/ui/Icon/Icon.module.scss
+++ b/src/shared/ui/Icon/Icon.module.scss
@@ -1,7 +1,9 @@
 .Icon {
     fill: var(--secondary-color);
+    color: var(--secondary-color);
 }
 
 .inverted {
     fill: var(--primary-color);
+    color: var(--secondary-color);
 }
