chore: add prettier

--- a/src/entities/Comment/ui/CommentItem/CommentItem.module.scss
+++ b/src/entities/Comment/ui/CommentItem/CommentItem.module.scss
@@ -1,10 +1,9 @@
 .CommentItem {
     border: 1px solid var(--primary-color);
-  
 }
 
-.CommentItemHeader, .CommentItemText {
+.CommentItemHeader,
+.CommentItemText {
     margin-left: 5px;
     margin-top: 5px;
 }
-
