--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -7,7 +7,8 @@
     padding: 20px;
 }
 
-.links, .actions {
+.links,
+.actions {
     margin-left: auto;
     margin-right: 10px;
 }
@@ -20,5 +21,3 @@
     width: var(--sidebar-width);
     margin-left: 15px;
 }
-
-
