--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -21,21 +21,21 @@
 }
 
 .listItemsWrapper {
-    height: 100%;
     padding: 20px 20px 20px 45px;
     height: calc(100vh - var(--navbar-height));
-   & :first-child {
+
+    & :first-child {
         position: inherit !important;
     }
 }
 
 .gridItemsWrapper {
-   & :first-child {
+    & :first-child {
         position: inherit !important;
     }
 }
 
-.itemsWrapper{
+.itemsWrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -52,11 +52,11 @@
     margin-right: 30px;
 
     @media (max-width: 1024px) {
-        width: 50%
+        width: 50%;
     }
 
     @media (max-width: 300px) {
-        width: 100%
+        width: 100%;
     }
 }
 
