--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -18,7 +18,7 @@
     transition: 0.3s transform;
     transform: scale(0.5);
     overflow: hidden;
-    z-index: var(--modal-z-index)
+    z-index: var(--modal-z-index);
 }
 
 .opened {
